--- a/count.html
+++ b/count.html
@@ -2,10 +2,28 @@
 <html lang="en">
   <head>
     <title>Count!</title>
+    <style>
+      h1 {
+        font-size: 10em;
+        width: 100%
+        height: 100%;
+        background-color: lavender;
+        border: 0;
+        margin: 0;
+      }
+    </style>
+    <script>
+      var count_up = function() {
+        var h = document.querySelector("#number");
+        var num = parseInt(h.innerText);
+        console.log(num + 1);
+        h.innerText = num+1;
+      }
+    </script>
   </head>
-  
+
   <body>
-    <h1 id="number">
+    <h1 id="number" onclick="count_up()">
       1
     </h1>
   </body>
