--- a/count.html
+++ b/count.html
@@ -3,13 +3,16 @@
   <head>
     <title>Count!</title>
     <style>
-      h1 {
-        font-size: 10em;
-        width: 100%
-        height: 100%;
-        background-color: lavender;
-        border: 0;
+      body {
         margin: 0;
+        padding: 0;
+      }
+      div {
+        font-size: 10em;
+        width: 100%;
+        height: auto;
+        background-color: lavender;
+        margin: 0 auto;
       }
     </style>
     <script>
@@ -23,8 +26,8 @@
   </head>
 
   <body>
-    <h1 id="number" onclick="count_up()">
+    <div id="number" onclick="count_up()">
       1
-    </h1>
+    </div>
   </body>
 </html>
