--- a/count.html
+++ b/count.html
@@ -6,13 +6,21 @@
       body {
         margin: 0;
         padding: 0;
+        height: 100vh;
+        width: 100vw;
+        display: flex;
+        justify-content: center;
       }
       div {
-        font-size: 10em;
-        width: 100%;
-        height: auto;
+        font-size: 50vw;
+        width: 100vw;
+        height: 100vh;
+        padding:0;
+        margin: 0;
         background-color: lavender;
-        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+
       }
     </style>
     <script>
