--- a/count.html
+++ b/count.html
@@ -10,6 +10,7 @@
         width: 100vw;
         display: flex;
         justify-content: center;
+        align-items: center;
       }
       div {
         font-size: 50vw;
