--- a/count.html
+++ b/count.html
@@ -3,19 +3,22 @@
   <head>
     <title>Count!</title>
     <style>
+      html {
+        overflow: hidden;
+      }
       body {
         margin: 0;
         padding: 0;
-        height: 90vh;
-        width: 90vw;
+        height: 100vh;
+        width: 100vw;
         display: flex;
         justify-content: center;
         align-items: center;
       }
       div {
         font-size: 50vw;
-        width: 90vw;
-        height: 90vh;
+        width: 100%;
+        height: 100%;
         padding:0;
         margin: 0;
         background-color: lavender;
