changed view area

--- a/count.html
+++ b/count.html
@@ -52,7 +52,7 @@
       }
       //document.getElementById("number").addEventListener('pointerdown', count_up);
       document.getElementById("number").addEventListener('touchstart', count_up);
-      document.getElementById("number").addEventListener('touchmove', count_up);
+      //document.getElementById("number").addEventListener('touchmove', count_up);
     </script>
   </body>
 </html>
