--- a/count.html
+++ b/count.html
@@ -52,6 +52,8 @@
       }
       //document.getElementById("number").addEventListener('pointerdown', count_up);
       document.getElementById("number").addEventListener('touchstart', count_up);
+      document.getElementById("number").addEventListener('click', count_up);
+
       //document.getElementById("number").addEventListener('touchmove', count_up);
     </script>
   </body>
