--- a/count1.html
+++ b/count1.html
@@ -32,7 +32,20 @@
         -khtml-user-select: none;
         -webkit-user-select: none;
         -o-user-select: none;
+      }
+      #binary {
+        margin-top: 10px;
+        font-size: 5vw;
+      }
 
+      .active {
+        border: 1px solid black;
+        background-color: green;
+      }
+
+      td {
+        width: 5vw;
+        text-align: center;
       }
     </style>
   </head>
@@ -49,19 +62,19 @@
       var count_up = function() {
         var h = document.getElementById("number");
         var num = parseInt(h.innerText);
-        console.log(num + 1);
+        //console.log(num + 1);
         h.innerText = num+1;
-      }
+      };
       var count_down = function() {
         var h = document.getElementById("number");
         var num = parseInt(h.innerText);
         if ( num > 0 ) {
-          console.log(num - 1);
+          //console.log(num - 1);
           h.innerText = num-1;
         }
-      }
-      document.getElementById("plus").addEventListener('touchstart', count_up);
-      document.getElementById("minus").addEventListener('touchstart', count_down);
+      };
+      document.getElementById("plus").addEventListener('click', count_up);
+      document.getElementById("minus").addEventListener('click', count_down);
 
     </script>
   </body>
