--- a/countbin.html
+++ b/countbin.html
@@ -130,8 +130,8 @@
 
       //document.getElementById("number").addEventListener('touchstart', count_up);
       //document.getElementById("number").addEventListener('click', count_up);
-      document.getElementById("plus").addEventListener('touchstart', count_up);
-      document.getElementById("minus").addEventListener('touchstart', count_down);
+      //document.getElementById("plus").addEventListener('touchstart', count_up);
+      //document.getElementById("minus").addEventListener('touchstart', count_down);
       document.getElementById("plus").addEventListener('click', count_up);
       document.getElementById("minus").addEventListener('click', count_down);
       //document.getElementById("number").addEventListener('touchmove', count_up);
