--- a/countbin.html
+++ b/countbin.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+    <!--
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    -->
     <title>Count!</title>
     <style>
       html {
-        overflow: hidden;
+          overflow: hidden;
+	  touch-action: pan-x pan-y;
+	  height: 100%;
       }
       body {
         margin: 0;
@@ -19,7 +26,7 @@
         background-color: lavender;
       }
       div {
-        font-size: 50vw;
+        font-size: 40vw;
         width: 100%;
         height: 90%;
         padding:0;
@@ -68,9 +75,10 @@
       <span id="number">0</span>
       <span id="plus" style="width: 40%">+</span>
     </div>
+
+
     <script>
       var count_up = function() {
-        //var h = document.querySelector("#number");
         var h = document.getElementById("number");
         var num = parseInt(h.innerText);
         //console.log(num + 1);
