--- a/multiples.html
+++ b/multiples.html
@@ -47,7 +47,7 @@
 
   <body>
     <div id="number" class="container">
-      <input type="text" id="base" value="0" width="5"></input>
+      <input type="number" id="base" value="0" width="5"></input>
       <button id="go">Go!</button>
     </div>
 
