--- a/multiples.html
+++ b/multiples.html
@@ -47,6 +47,7 @@
 
   <body>
     <div id="number" class="container">
+      <button id="primes">Primes!</button>
       <input type="number" id="base" value="0" width="5"></input>
       <button id="go">Go!</button>
     </div>
