--- a/multiples.html
+++ b/multiples.html
@@ -23,6 +23,7 @@
         display: flex;
         flex-flow: column;
         justify-content: center;
+        width: 10%;
       }
       #tarea {
         height: 95%;
