--- a/multiples.html
+++ b/multiples.html
@@ -33,7 +33,7 @@
         text-align: center;
       }
       button {
-        height: 20%;
+        font-size: 2vw;
       }
       div {
         /*font-size: 5vw*/;
